--- a/nes.html
+++ b/nes.html
@@ -373,7 +373,7 @@ summary {
 <h2>Model Results</h2>
 <p>Here is a nicely printed summary of my model results, showing the relationship between party ID, on a 1 through 7 scale, and ideology, also on a 1 through 7 scale. Although these are ordered categories, I treat both variables as continuous.</p>
 <pre><code>            Median MAD_SD
-(Intercept) 0.97   0.05  
+(Intercept) 0.96   0.05  
 real_ideo   0.66   0.01  
 
 Auxiliary parameter(s):
@@ -388,13 +388,13 @@ Model Info:
  formula:      partyid7 ~ real_ideo
  algorithm:    sampling
  sample:       4000 (posterior sample size)
- priors:       see help(&#39;prior_summary&#39;)
+ priors:       see help('prior_summary')
  observations: 16590
  predictors:   2
 
 Estimates:
               mean   sd   10%   50%   90%
-(Intercept) 0.97   0.05 0.90  0.97  1.03 
+(Intercept) 0.96   0.05 0.91  0.96  1.03 
 real_ideo   0.66   0.01 0.65  0.66  0.68 
 sigma       1.90   0.01 1.88  1.90  1.91 
 
@@ -402,18 +402,18 @@ Fit Diagnostics:
            mean   sd   10%   50%   90%
 mean_PPD 3.79   0.02 3.76  3.79  3.82 
 
-The mean_ppd is the sample average posterior predictive distribution of the outcome variable (for details see help(&#39;summary.stanreg&#39;)).
+The mean_ppd is the sample average posterior predictive distribution of the outcome variable (for details see help('summary.stanreg')).
 
 MCMC diagnostics
               mcse Rhat n_eff
-(Intercept)   0.00 1.00 3866 
-real_ideo     0.00 1.00 3940 
-sigma         0.00 1.00 3354 
-mean_PPD      0.00 1.00 3171 
-log-posterior 0.03 1.00 1874 
+(Intercept)   0.00 1.00 4118 
+real_ideo     0.00 1.00 4238 
+sigma         0.00 1.00 3165 
+mean_PPD      0.00 1.00 3472 
+log-posterior 0.03 1.00 2144 
 
 For each parameter, mcse is Monte Carlo standard error, n_eff is a crude measure of effective sample size, and Rhat is the potential scale reduction factor on split chains (at convergence Rhat=1).</code></pre>
-<p>But that adds a bunch of junk, including run-off-the-page text. Maybe there are options in something like <code>print.stanmvreg()</code> which might be helpful.</p>
+<p>But that adds a bunch of junk, including run-off-the-page text. Maybe there are options in something like <code>print.stanmvreg()</code> which might be helpful. Has no one bothered to ask on RStudio Community?</p>
 </div>
 
 
